Added TinyObjLoader and STB as submodules.
Both of these dependencies will eventually be needed anyway, since we'll
probably need the OBJ files to preview Yuksel's woman model, used in all
the major research papers on hair rendering I know of. STB is also added
since we'll eventually need to load in some image and create glyphs too.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "foreign/imgui"]
 	path = foreign/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "foreign/tinyobjloader"]
+	path = foreign/tinyobjloader
+	url = https://github.com/syoyo/tinyobjloader.git
+[submodule "foreign/stb"]
+	path = foreign/stb
+	url = https://github.com/nothings/stb.git
