--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ share/models/** filter=lfs diff=lfs merge=lfs -text
 share/binary/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
 docs/paper.pdf  filter=lfs diff=lfs merge=lfs -text
+docs/manual.pdf filter=lfs diff=lfs merge=lfs -text
