--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
+*.lib           filter=lfs diff=lfs merge=lfs -text
 share/images/** filter=lfs diff=lfs merge=lfs -text
 share/models/** filter=lfs diff=lfs merge=lfs -text
 share/binary/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
 docs/manual.pdf filter=lfs diff=lfs merge=lfs -text
 docs/paper.pdf  filter=lfs diff=lfs merge=lfs -text
+foreign/glfw/*  linguist-vendored
