--- a/utils/PKGBUILD
+++ b/utils/PKGBUILD
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/CaffeineViking/vkhr"
 license=('MIT')
 provides=('vkhr')
-depends=('glfw' 'vulkan')
+depends=('glfw' 'vulkan-icd-loader' 'vulkan-headers')
 makedepends=('git' 'premake-git')
 source=('git+https://github.com/CaffeineViking/vkhr')
 md5sums=('SKIP')
@@ -20,12 +20,13 @@ pkgver() {
 
 build() {
 	cd vkhr
-	make
+    make download-modules
+    make  config=release
 }
 
 package() {
 	cd vkhr
-	install -Dm755 bin/vkhr "$pkgdir"/usr/bin/vkhr
+	install -Dm755 bin/vkhr    "$pkgdir"/usr/bin/vkhr
 	install -Dm755 docs/vkhr.1 "$pkgdir"/usr/share/man/man1/vkhr.1
-	install -Dm644 license.md "$pkgdir"/usr/share/licenses/vkhr/LICENSE
+	install -Dm644 license.md  "$pkgdir"/usr/share/licenses/vkhr/LICENSE
 }
