--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 *.pdf           filter=lfs diff=lfs merge=lfs -text
 share/images/** filter=lfs diff=lfs merge=lfs -text
 share/models/** filter=lfs diff=lfs merge=lfs -text
-share/binary/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
+share/styles/** filter=lfs diff=lfs merge=lfs -text
 foreign/*       linguist-vendored
