--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
 *.lib           filter=lfs diff=lfs merge=lfs -text
 *.pdf           filter=lfs diff=lfs merge=lfs -text
+*.ico           filter=lfs diff=lfs merge=lfs -text
 share/images/** filter=lfs diff=lfs merge=lfs -text
 share/models/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
 share/styles/** filter=lfs diff=lfs merge=lfs -text
+docs/figures/*  linguist-vendored
 foreign/*       linguist-vendored
 build/*         linguist-vendored
