--- a/utils/PKGBUILD
+++ b/utils/PKGBUILD
@@ -26,22 +26,23 @@ build() {
 
 package() {
 	cd vkhr
-	install -Dm755 bin/vkhr                     "$pkgdir"/usr/bin/vkhr
-	install -Dm755 docs/vkhr.1                  "$pkgdir"/usr/share/man/man1/vkhr.1
-	install -Dm644 license.md                   "$pkgdir"/usr/share/licenses/vkhr/LICENSE
+	install -Dm755 bin/vkhr                           "$pkgdir"/usr/bin/vkhr
+	install -Dm755 docs/vkhr.1                        "$pkgdir"/usr/share/man/man1/vkhr.1
+	install -Dm644 license.md                         "$pkgdir"/usr/share/licenses/vkhr/LICENSE
 
-	install -Dm644 share/images/vulkan.png      "$pkgdir"/usr/share/vkhr/images/vulkan.png
+	install -Dm644 share/images/vulkan.icon           "$pkgdir"/usr/share/vkhr/images/vulkan.icon
 
-	install -Dm644 share/styles/wCurly.hair     "$pkgdir"/usr/share/vkhr/styles/wCurly.hair
-	install -Dm644 share/styles/wStraight.hair  "$pkgdir"/usr/share/vkhr/styles/wStraight.hair
-	install -Dm644 share/styles/wWavy.hair      "$pkgdir"/usr/share/vkhr/styles/wWavy.hair
-	install -Dm644 share/styles/wWavyThin.hair  "$pkgdir"/usr/share/vkhr/styles/wWavyThin.hair
+	install -Dm644 share/styles/wCurly.hair           "$pkgdir"/usr/share/vkhr/styles/wCurly.hair
+	install -Dm644 share/styles/wStraight.hair        "$pkgdir"/usr/share/vkhr/styles/wStraight.hair
+	install -Dm644 share/styles/wWavy.hair            "$pkgdir"/usr/share/vkhr/styles/wWavy.hair
+	install -Dm644 share/styles/wWavyThin.hair        "$pkgdir"/usr/share/vkhr/styles/wWavyThin.hair
+	install -Dm644 share/styles/ponytail.hair         "$pkgdir"/usr/share/vkhr/styles/ponytail.hair
+	install -Dm644 share/styles/bear.hair             "$pkgdir"/usr/share/vkhr/styles/bear.hair
 
-	install -Dm644 share/models/woman/eye.tga   "$pkgdir"/usr/share/vkhr/models/woman/eye.tga
-	install -Dm644 share/models/woman/head.tga  "$pkgdir"/usr/share/vkhr/models/woman/head.tga
-	install -Dm644 share/models/woman/woman.mtl "$pkgdir"/usr/share/vkhr/models/woman/woman.mtl
-	install -Dm644 share/models/woman/woman.obj "$pkgdir"/usr/share/vkhr/models/woman/woman.obj
-
-	install -Dm644 share/models/lara/lara.obj "$pkgdir"/usr/share/vkhr/models/lara/lara.obj
-	install -Dm644 share/models/bear/bear.obj "$pkgdir"/usr/share/vkhr/models/bear/bear.obj
+	install -Dm644 share/models/woman/eye.tga         "$pkgdir"/usr/share/vkhr/models/woman/eye.tga
+	install -Dm644 share/models/woman/head.tga        "$pkgdir"/usr/share/vkhr/models/woman/head.tga
+	install -Dm644 share/models/woman/woman.mtl       "$pkgdir"/usr/share/vkhr/models/woman/woman.mtl
+	install -Dm644 share/models/woman/woman.obj       "$pkgdir"/usr/share/vkhr/models/woman/woman.obj
+	install -Dm644 share/models/ponytail/ponytail.obj "$pkgdir"/usr/share/vkhr/models/ponytail/ponytail.obj
+	install -Dm644 share/models/bear/bear.obj         "$pkgdir"/usr/share/vkhr/models/bear/bear.obj
 }
