--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.a             filter=lfs diff=lfs merge=lfs -text
 *.lib           filter=lfs diff=lfs merge=lfs -text
 *.pdf           filter=lfs diff=lfs merge=lfs -text
 *.ico           filter=lfs diff=lfs merge=lfs -text
