Added Embree as a dependency and added DLL for it.

--- a/utils/PKGBUILD
+++ b/utils/PKGBUILD
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/CaffeineViking/vkhr"
 license=('MIT')
 provides=('vkhr')
-depends=('glfw' 'vulkan-icd-loader' 'vulkan-headers')
+depends=('embree', 'glfw' 'vulkan-icd-loader' 'vulkan-headers')
 makedepends=('git' 'premake-git')
 source=('git+https://github.com/CaffeineViking/vkhr')
 md5sums=('SKIP')
