--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 *.a             filter=lfs diff=lfs merge=lfs -text
 *.lib           filter=lfs diff=lfs merge=lfs -text
+*.dll           filter=lfs diff=lfs merge=lfs -text
 *.pdf           filter=lfs diff=lfs merge=lfs -text
-*.ico           filter=lfs diff=lfs merge=lfs -text
 share/images/** filter=lfs diff=lfs merge=lfs -text
 share/models/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
