--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 *.lib           filter=lfs diff=lfs merge=lfs -text
 *.dll           filter=lfs diff=lfs merge=lfs -text
 *.pdf           filter=lfs diff=lfs merge=lfs -text
+*.spv           filter=lfs diff=lfs merge=lfs -text
 share/images/** filter=lfs diff=lfs merge=lfs -text
 share/models/** filter=lfs diff=lfs merge=lfs -text
 docs/figures/** filter=lfs diff=lfs merge=lfs -text
