Added support for command buffer draw submissions.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -1,7 +1,7 @@
 all: simple.vert.spv simple.frag.spv
 
-simple.vert.spv: simple.vert simple.glsl
+simple.vert.spv: simple.vert
 	glslc -O -Os -c simple.vert
 
-simple.frag.spv: simple.frag simple.glsl
+simple.frag.spv: simple.frag
 	glslc -O -Os -c simple.frag
