Added buffer and device memory wrappers as well.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -3,5 +3,5 @@ all: strand.vert.spv strand.frag.spv
 strand.vert.spv: strand.vert
 	glslc -O -Os -c strand.vert
 
-strand.frag.spv: strand.frag strand.glsl
+strand.frag.spv: strand.frag
 	glslc -O -Os -c strand.frag
