Added fullscreen billboard for showing raytrace.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -1,7 +1,13 @@
-all: kajiya-kay.vert.spv kajiya-kay.frag.spv
+all: billboards.vert.spv kajiya-kay.vert.spv billboards.frag.spv kajiya-kay.frag.spv
+
+billboards.vert.spv: billboards.vert
+	glslc -O -Os -c billboards.vert
 
 kajiya-kay.vert.spv: kajiya-kay.vert
 	glslc -O -Os -c kajiya-kay.vert
+
+billboards.frag.spv: billboards.frag
+	glslc -O -Os -c billboards.frag
 
 kajiya-kay.frag.spv: kajiya-kay.frag
 	glslc -O -Os -c kajiya-kay.frag
