--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -1,13 +1,13 @@
 all: billboards.vert.spv kajiya-kay.vert.spv billboards.frag.spv kajiya-kay.frag.spv
 
 billboards.vert.spv: billboards.vert
-	glslc -O -Os -c billboards.vert
+	glslc -O -g -c billboards.vert
 
 kajiya-kay.vert.spv: kajiya-kay.vert
-	glslc -O -Os -c kajiya-kay.vert
+	glslc -O -g -c kajiya-kay.vert
 
 billboards.frag.spv: billboards.frag
-	glslc -O -Os -c billboards.frag
+	glslc -O -g -c billboards.frag
 
 kajiya-kay.frag.spv: kajiya-kay.frag kajiya-kay.glsl
-	glslc -O -Os -c kajiya-kay.frag
+	glslc -O -g -c kajiya-kay.frag
