--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -1,10 +1,10 @@
-all: billboards.vert.spv depth-pass.vert.spv kajiya-kay.vert.spv billboards.frag.spv kajiya-kay.frag.spv
+all: billboards.vert.spv depth_pass.vert.spv kajiya-kay.vert.spv billboards.frag.spv kajiya-kay.frag.spv
 
 billboards.vert.spv: billboards.vert
 	glslc -O -g -c billboards.vert
 
-depth-pass.vert.spv: depth-pass.vert
-	glslc -O -g -c depth-pass.vert
+depth_pass.vert.spv: depth_pass.vert
+	glslc -O -g -c depth_pass.vert
 
 kajiya-kay.vert.spv: kajiya-kay.vert
 	glslc -O -g -c kajiya-kay.vert
