Renamed strand shader and a Blinn-Phong shader.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -1,4 +1,4 @@
-all: billboards.vert.spv depth_pass.vert.spv kajiya-kay.vert.spv billboards.frag.spv kajiya-kay.frag.spv
+all: billboards.vert.spv depth_pass.vert.spv strands.vert.spv billboards.frag.spv strands.frag.spv
 
 billboards.vert.spv: billboards.vert camera.glsl
 	glslc -O -g -c billboards.vert
@@ -6,11 +6,11 @@ billboards.vert.spv: billboards.vert camera.glsl
 depth_pass.vert.spv: depth_pass.vert
 	glslc -O -g -c depth_pass.vert
 
-kajiya-kay.vert.spv: kajiya-kay.vert camera.glsl
-	glslc -O -g -c kajiya-kay.vert
+strands.vert.spv: strands.vert camera.glsl
+	glslc -O -g -c strands.vert
 
 billboards.frag.spv: billboards.frag
 	glslc -O -g -c billboards.frag
 
-kajiya-kay.frag.spv: kajiya-kay.frag camera.glsl lights.glsl shadow_map.glsl kajiya-kay.glsl math.h.glsl
-	glslc -O -g -c kajiya-kay.frag
+strands.frag.spv: strands.frag camera.glsl lights.glsl shadow_map.glsl kajiya-kay.glsl math.glsl
+	glslc -O -g -c strands.frag
