Sampling of density values as AO-term for shadows.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -9,7 +9,7 @@ depth_pass.vert.spv: depth_pass.vert
 model.vert.spv: model.vert camera.glsl
 	glslc -O -g -c model.vert
 
-strand.vert.spv: strand.vert camera.glsl
+strand.vert.spv: strand.vert camera.glsl volume.glsl
 	glslc -O -g -c strand.vert
 
 billboard.frag.spv: billboard.frag
@@ -18,7 +18,7 @@ billboard.frag.spv: billboard.frag
 model.frag.spv: model.frag camera.glsl blinn-phong.glsl shadow_map.glsl math.glsl light.glsl
 	glslc -O -g -c model.frag
 
-strand.frag.spv: strand.frag camera.glsl shadow_map.glsl kajiya-kay.glsl math.glsl light.glsl
+strand.frag.spv: strand.frag camera.glsl shadow_map.glsl kajiya-kay.glsl math.glsl light.glsl volume.glsl
 	glslc -O -g -c strand.frag
 
 voxelize.comp.spv: voxelize.comp volume.glsl
