Refactor the shading structure.

--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -9,17 +9,17 @@ depth_pass.vert.spv: depth_pass.vert
 model.vert.spv: model.vert camera.glsl
 	glslc -O -g -c model.vert
 
-strand.vert.spv: strand.vert strand.glsl aabb.glsl camera.glsl
+strand.vert.spv: strand.vert strand.glsl bounding_box.glsl camera.glsl
 	glslc -O -g -c strand.vert
 
 billboard.frag.spv: billboard.frag
 	glslc -O -g -c billboard.frag
 
-model.frag.spv: model.frag camera.glsl blinn-phong.glsl shadow_map.glsl math.glsl light.glsl
+model.frag.spv: model.frag camera.glsl filter_shadows.glsl blinn-phong.glsl tex2Dproj.glsl linearize_depth.glsl light.glsl math.glsl shadow_map.glsl
 	glslc -O -g -c model.frag
 
-strand.frag.spv: strand.frag camera.glsl shadow_map.glsl kajiya-kay.glsl aabb.glsl math.glsl light.glsl volume.glsl strand.glsl
+strand.frag.spv: strand.frag approximate_deep_shadows.glsl camera.glsl shadow_map.glsl kajiya-kay.glsl volume.glsl light.glsl math.glsl tex2Dproj.glsl linearize_depth.glsl strand.glsl bounding_box.glsl
 	glslc -O -g -c strand.frag
 
-voxelize.comp.spv: voxelize.comp aabb.glsl volume.glsl strand.glsl
+voxelize.comp.spv: voxelize.comp volume.glsl strand.glsl bounding_box.glsl
 	glslc -O -g -c voxelize.comp
