--- a/share/shaders/Makefile
+++ b/share/shaders/Makefile
@@ -21,5 +21,5 @@ model.frag.spv: model.frag camera.glsl filter_shadows.glsl blinn-phong.glsl tex2
 strand.frag.spv: strand.frag parameters.glsl strand.glsl tex2Dproj.glsl bounding_box.glsl approximate_deep_shadows.glsl camera.glsl lights.glsl shadow_map.glsl kajiya-kay.glsl linearize_depth.glsl volume.glsl math.glsl raymarcher.glsl
 	glslc -O -g -c strand.frag
 
-voxelize.comp.spv: voxelize.comp volume.glsl strand.glsl bounding_box.glsl
+voxelize.comp.spv: voxelize.comp math.glsl volume.glsl strand.glsl bounding_box.glsl
 	glslc -O -g -c voxelize.comp
