Renamed the voxelization kernels.

--- a/share/shaders/voxelization/Makefile
+++ b/share/shaders/voxelization/Makefile
@@ -1,4 +1,4 @@
-all: voxelize.comp.spv
+all: voxelize_vertices.comp.spv
 
-voxelize.comp.spv: voxelize.comp aabb.glsl ../strand/strand.glsl ../strand/../voxelization/aabb.glsl sample_volume.glsl ../math.glsl
-	glslc -O -g -c voxelize.comp
+voxelize_vertices.comp.spv: voxelize_vertices.comp aabb.glsl ../strand/strand.glsl ../strand/../voxelization/aabb.glsl sample_volume.glsl ../math.glsl
+	glslc -O -g -c voxelize_vertices.comp
