Started adding the PPLL resolve step.

--- a/share/shaders/transparency/Makefile
+++ b/share/shaders/transparency/Makefile
@@ -1,4 +1,4 @@
 all: resolve.comp.spv
 
-resolve.comp.spv: resolve.comp sorting.glsl ppll.glsl
+resolve.comp.spv: resolve.comp ppll.glsl
 	glslc -O -g -c resolve.comp
